# Agentic-Chatbot

./: agent.ipynb  backend.py  chatbot.db  db_backend.py  db_frontend.py  main.py  pyproject.toml  requirements.txt  streamlit_frontend.py  streamlit_newchat_frontend.py
utils/: add_threads.py  generate_new_chat.py  generate_thread.py  load_chat_history.py  retrieve_threads.py
